--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import '~bulma/bulma';
-@import '~font-awesome';
+@import '~@fortawesome/fontawesome-free/css/all.css';
 
 .App {
   text-align: center;
