--- a/src/components/queryInput.scss
+++ b/src/components/queryInput.scss
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: column;
   min-width: 500px;
+
+  .dropdown-item {
+    display: flex;
+    align-items: center;
+    text-align: left;
+  }
 }
